--- a/source/less/header.less
+++ b/source/less/header.less
@@ -1,4 +1,4 @@
-header{
+.page-header{
   display:flex;
   justify-content: space-around;
   align-items: center;
@@ -6,17 +6,4 @@ margin-left: 20px;
   margin-right:20px;
 
 }
-  .main-nav__toggle{
-  background-image:url("../img/icon-mobile-menu.svg");
-background-color:white;
-  width:24px;
-  height:18px;
-    border:0px;
 
-}
-.main-nav__toggle:active .main-nav__wrapper{
-  display:block;
-}
-.main-nav__wrapper{
-display:none;
-}
