--- a/source/less/programms.less
+++ b/source/less/programms.less
@@ -42,6 +42,6 @@ background-image: url("../img/icon-cat-pro.svg");
 .programms__description{
   font-size:14px;
 }
-.programms a{
+.programms__catalog{
   font-size:16px;
 }
