--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,3 +12,9 @@
 @import "fonts.less";
 @import "another-products.less";
 @import "scaffolding.less";
+@import "product-item.less";
+@import "main-nav.less";
+@import "addproducts-list.less";
+@import "addproducts-card.less";
+@import "social__link.less";
+@import "social__list.less";
