--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -13,7 +13,7 @@ background-color: lightgray;
   width:40%;
 margin-left:20px;
 }
-address{
+.contacts__address{
 
   font-size:16px;
   font-style: normal;
