--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -1,4 +1,4 @@
-footer{
+.page-footer{
   background-color:lightgray;
 }
 .page-footer__logo-image{
@@ -9,36 +9,5 @@ footer{
 
 
 }
-.social__list{
-  display:flex;
-  justify-content: center;
-  list-style: none;
-}
-.social__link{
-  display:block;
-  width:20px;
-  height:20px;
-  margin:20px;
-}
-.social__link span{
-  display:none;
-}
-.social__link--vkontakte{
-  background-image:url("../img/icon-vk-mobile.svg");
-  background-repeat:no-repeat;
 
-}
-.social__link--facebook{
-  background-image:url("../img/icon-fb-mobile.svg");
-  background-repeat:no-repeat;
 
-}
-.social__link--instagram{
-  background-image:url("../img/icon-insta-mobile.svg");
-  background-repeat:no-repeat;
-
-}
-.social__list{
-  border-bottom: 1px solid grey;
-  border-top:1px solid grey;
-}
