--- a/source/less/items-cards.less
+++ b/source/less/items-cards.less
@@ -1,4 +1,4 @@
-h1{
+.items-cards__title{
   font-size:36px;
   margin-left:20px;
   border-top:1px solid lightgray;
@@ -6,37 +6,4 @@ h1{
 }
 .items-cards__list{
   list-style:none;
-}
-.product-item{
-  display:flex;
-  flex-wrap: wrap;
-  border-top:1px solid lightgray;
-}
-.product-item__photo{
-padding:20px;
-}
-
-.product-item__title{
-  font-size:16px;
-}
-.product-item__value{
-  font-size:12px;
-}
-.product-item__field{
-  font-size:12px;
-}
-.product-item__order
-{
-  display: flex;
-  width:280px;
-  height:40px;
-  background-color: rgba(104,183,56, 1);
-  color:white;
-  font-size:16px;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-}
-.product-item__wrap{
-  margin-bottom: 20px;
 }
