--- a/source/less/social.less
+++ b/source/less/social.less
@@ -22,3 +22,10 @@
   background-repeat:no-repeat;
 
 }
+.social__list{
+  display:flex;
+  justify-content: center;
+  list-style: none;
+  border-bottom: 1px solid grey;
+  border-top:1px solid grey;
+}
