--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,5 +16,5 @@
 @import "main-nav.less";
 @import "addproducts-list.less";
 @import "addproducts-card.less";
-@import "social__link.less";
-@import "social__list.less";
+@import "social.less";
+
